--- a/meddashboard/index.html
+++ b/meddashboard/index.html
@@ -24,7 +24,12 @@
                 <h2>Oxygen Level</h2>
                 <p>98%</p>
             </div>
+            <div class="chart-container">
+    <h2>Heart Rate Trends</h2>
+    <canvas id="heartRateChart"></canvas>
+</div>
         </main>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </body>
 </html>
